--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+
+    "docker:build": "docker build -t mpei-webhook .",
+    "docker:run": "docker run -d -p 9001:9001 --name mpei-webhook --network=mpei-systems_default mpei-webhook",
   },
   "repository": {
     "type": "git",
