--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mpei-systems",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
@@ -29,7 +29,8 @@
     "dotenv": "^16.0.1",
     "koa": "^2.13.4",
     "koa-body-parser": "^1.1.2",
-    "koa-helmet": "^6.1.0"
+    "koa-helmet": "^6.1.0",
+    "telegraf": "^4.9.1"
   },
   "devDependencies": {
     "eslint": "^8.21.0",
