--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mpei-systems",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
@@ -30,6 +30,7 @@
     "koa": "^2.13.4",
     "koa-body-parser": "^1.1.2",
     "koa-helmet": "^6.1.0",
+    "moment": "^2.29.4",
     "telegraf": "^4.9.1"
   },
   "devDependencies": {
