--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -46,7 +46,7 @@ services:
       - ./.env.admin
     environment:
       - NODE_ENV=${NODE_ENV}
-      - API_URL=http://api:${API_PORT}
+      - API_ADDRESS=http://api:${API_PORT}
 
   telegram-bot:
     build: github.com/Alaladdin/mpei-telegram#main
