--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mpei-systems",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "main": "index.js",
   "scripts": {
     "start": "node app.js",
@@ -21,18 +21,18 @@
   },
   "homepage": "https://github.com/Alaladdin/mpei-systems#readme",
   "dependencies": {
-    "chalk": "^4.1.2",
-    "dotenv": "^16.0.1",
+    "chalk": "4.1.2",
+    "dotenv": "^16.0.3",
     "koa": "^2.13.4",
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^6.1.0",
     "moment": "^2.29.4",
-    "telegraf": "^4.9.1"
+    "telegraf": "^4.11.2"
   },
   "devDependencies": {
-    "eslint": "^8.21.0",
+    "eslint": "^8.28.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.20"
   }
 }
